Navbar section completed here

--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <!-- nav-section starts here -->
+        <nav class="navbar">
+            <h1>Fitness</h1>
+            <ul class="nav-item">
+                <li class="nav-links"><a href=""><span class="Home">Home</span></a></li>
+                <li class="nav-links"><a href="">Service</a></li>
+                <li class="nav-links"><a href="">Contact</a></li>
+                <li class="nav-links"><a href="">About</a></li>
+            </ul>
+            <div class="hamburger">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </nav>
+
+        <!-- nav-section ends here -->
+    </header>
+
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
