banner section is completed with responsive here

--- a/index.html
+++ b/index.html
@@ -22,8 +22,34 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
-
         <!-- nav-section ends here -->
+         <!-- banner section started here -->
+            <div class="banner">
+                <div class="banner-content">
+                    <h1>Get body in <br><span class="shape">Shape</span> & stay <br> healthy</h1>
+                    <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                    <button class="banner-button-1">Join Club Now!</button>
+                    <button class="banner-button-2">Download App</button>
+                </div>
+                <div class="banner-image">
+                    <img src="./images/Images 2.png" alt="">
+                    <div class="banner-card-1">
+                        <h1>500+</h1>
+                        <p>free workout videos</p>
+                    </div>
+                    <div class="banner-card-2">
+                        <div>
+                            <span><i class="fa-solid fa-play"></i></span>
+                        </div>
+                        <div>
+                            <h1>300+</h1>
+                            <p>video tutorial</p>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+         <!-- banner section ends here -->
     </header>
 
     <main>
