run-extra-mile-section completed here

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
     <main>
 <!-- Main section starts here -->
+ <!-- change habit container starts here -->
  <section class="change-habit-container">
     <div class="change-habit-content">
         <h1>Change Your Habits</h1>
@@ -106,6 +107,23 @@
     </div>
 
  </section>
+ <!-- change habit container ends here -->
+
+ <!-- run-extra-mile starts here -->
+
+ <section class="run-extra-mile-container">
+    <div class="run-mile-content">
+        <h1>Run an Extra <br> Mile Easily</h1>
+        <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+        <button>Join Now</button>
+    </div>
+    <div class="run-mile-image">
+        <img src="./images/run update.png" alt="">
+
+    </div>
+
+ </section>
+ <!-- run extra miles ends here -->
 <!-- Main section ends here -->
     </main>
     <footer>
