run extra mile is completed here with responsiveness

--- a/index.html
+++ b/index.html
@@ -114,16 +114,18 @@
  <section class="run-extra-mile-container">
     <div class="run-mile-content">
         <h1>Run an Extra <br> Mile Easily</h1>
-        <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+        <p>We believe fitness should be accessible to everyone, <br class="hide-in-small-device"> everywhere, regardless of income or access to a gym. With <br class="hide-in-small-device"> hundreds of professional workouts.</p>
         <button>Join Now</button>
     </div>
     <div class="run-mile-image">
-        <img src="./images/run update.png" alt="">
+        <img src="./images/run.jpg" alt="">
 
     </div>
 
  </section>
  <!-- run extra miles ends here -->
+
+
 <!-- Main section ends here -->
     </main>
     <footer>
