banner section is upadted here

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="banner">
                     <div class="banner-content">
                         <h1>Get body in <br><span class="shape">Shape</span> & stay <br> healthy</h1>
-                        <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                        <p>A huge selection of health and fitness content, healthy recipes <br class="hide-in-small-device"> and transformation stories to help you get fit and stay fit!</p>
                         <button class="banner-button-1">Join Club Now!</button>
                         <button class="banner-button-2">Download App</button>
                     </div>
@@ -124,7 +124,9 @@
 
  </section>
  <!-- run extra miles ends here -->
+<section>
 
+</section>
 
 <!-- Main section ends here -->
     </main>
