some codes are updated here

--- a/index.html
+++ b/index.html
@@ -125,6 +125,17 @@
  </section>
  <!-- run extra miles ends here -->
 <section>
+    <div class="bmi-calculator-content">
+        <h1>BMI Calculator</h1>
+        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income <br class="hide-in-small-device"> or access to a gym.</p>
+    </div>
+</section>
+
+<section class="calculator-chart-and-calculator-bmi-container">
+    <div class="table-section">
+
+    </div>
+
 
 </section>
 
