--- a/index.html
+++ b/index.html
@@ -133,6 +133,50 @@
 
 <section class="calculator-chart-and-calculator-bmi-container">
     <div class="table-section">
+        <h1>BMI Calculator Chart</h1>
+        <table>
+           <thead>
+                <tr>
+                    <th>BMI</th>
+                    <th>Weight Status</th>
+                </tr>
+           </thead>
+            <tbody>
+                <tr>
+                    <td>Below 18.5</td>
+                    <td>Underweight</td>
+                </tr>
+                <tr>
+                    <td>18.5 - 24.9</td>
+                    <td>Healthy</td>
+                </tr>
+                <tr>
+                    <td>25.0 - 29.9</td>
+                    <td>Overweight</td>
+                </tr>
+                <tr>
+                    <td>30.0 - and Above</td>
+                    <td>Obese</td>
+                </tr>
+            </tbody>
+            
+        </table>
+
+    </div>
+    <div class="calculate-bmi">
+        <h1>Calculate your BMI</h1>
+        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+        <form>
+            <input type="text" placeholder="Height/cm">
+            <input type="text" placeholder="Weight/kg">
+            <input type="text" placeholder="Age">
+            <select name="" id="sex">
+                <option value="sex">sex</option>
+            </select> <br>
+            <select name="" id="Select an activity factor" >
+                <option value="Select an activity factor">Select an activity factor</option>
+            </select>
+        </form>
 
     </div>
 
