BMI calculator is responsive here

--- a/index.html
+++ b/index.html
@@ -168,14 +168,15 @@
         <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
         <form>
             <input type="text" placeholder="Height/cm">
-            <input type="text" placeholder="Weight/kg">
+            <input type="text" placeholder="Weight/kg"><br><br>
             <input type="text" placeholder="Age">
             <select name="" id="sex">
-                <option value="sex">sex</option>
-            </select> <br>
-            <select name="" id="Select an activity factor" >
+                <option value="sex" id="dropdown">Sex</option>
+            </select> <br><br>
+            <select name="" id="Select-an-activity-factor" >
                 <option value="Select an activity factor">Select an activity factor</option>
-            </select>
+            </select><br>
+            <button class="calculator">Calculate</button>
         </form>
 
     </div>
