here meet our team completed and some code have been updated

--- a/index.html
+++ b/index.html
@@ -184,6 +184,65 @@
 
 </section>
 
+<!-- meet our team section starts here -->
+ <section>
+    <div class="meet-team-content">
+        <h1>Meet Our Team</h1>
+        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income <br class="hide-in-small-device"> or access to a gym.</p>
+    </div>
+
+    <div class="meet-team-image-container">
+        <div class="trainer-parent">
+            <img src="./images/trainer1.png" alt="">
+            <div class="trainer-child">
+                <h4>Jerom Bell</h4>
+                <p>Trainer</p>
+            </div>
+        </div>
+            
+        <div class="trainer-parent">
+            <img src="./images/trainer2.png" alt="">
+            <div class="trainer-child">
+                <h4>Cameron Willi</h4>
+                <p>Trainer</p>
+            </div>
+        </div>
+        <div class="trainer-parent">
+            <img src="./images/trainer3.png" alt="">
+            <div class="trainer-child">
+                <h4>Darrell Steward</h4>
+                <p>Trainer</p>
+            </div>
+        </div>
+        <div class="trainer-parent">
+            <img src="./images/trainer4.png" alt="">
+            <div class="trainer-child">
+                <h4>Dianne Russell</h4>
+                <p>Trainer</p>
+            </div>
+        </div>
+        <div class="trainer-parent">
+            <img src="./images/trainer5.png" alt="">
+            <div class="trainer-child">
+                <h4>Cody Fisher</h4>
+                <p>Trainer</p>
+            </div>
+        </div>
+        <div class="trainer-parent">
+            <img src="./images/trainer6.png" alt="">
+            <div class="trainer-child">
+                <h4>Theresa Webb</h4>
+                <p>Trainer</p>
+            </div>
+        </div>
+
+    </div>
+
+
+
+ </section>
+<!-- meet our team section ends here -->
+
 <!-- Main section ends here -->
     </main>
     <footer>
