In meet our team images filter property is applied here

--- a/index.html
+++ b/index.html
@@ -243,6 +243,15 @@
  </section>
 <!-- meet our team section ends here -->
 
+<!-- Extra section design is starts here -->
+ <section class="additional-section-container">
+    <div class="additional-section-content">
+        
+    </div>
+
+ </section>
+<!-- Extra section design is ends here -->
+
 <!-- Main section ends here -->
     </main>
     <div class="footer">
