extra section is completed here

--- a/index.html
+++ b/index.html
@@ -246,7 +246,83 @@
 <!-- Extra section design is starts here -->
  <section class="additional-section-container">
     <div class="additional-section-content">
-        
+        <h1>Our Online Shop</h1>
+        <p>Fitness enhances physical health, boosts mental well-being, increases energy levels, and promotes overall longevity through regular exercise and healthy habits.</p>  
+    </div>
+
+    <div class="card-container">
+        <div class="card">
+            <div class="cards-image">
+                <img src="./images/dumbell.jpeg" alt="">
+            </div>
+
+            <div class="card-description">
+                <h2>Dumbell</h2>
+                <p>Dumbbells are versatile weights used in strength training, offering a wide range of exercises to build muscle, improve endurance, and enhance flexibility. They come in various sizes and are ideal for both home and gym workouts, allowing for targeted muscle development and balanced.
+                </p>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <p>$34.00</p>
+                <button>Add to Cart</button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="cards-image">
+                <img src="./images/shoes.jpeg" alt="">
+            </div>
+
+            <div class="card-description">
+                <h2>Sports Shoes</h2>
+                <p>Sports shoes are designed for athletic activities, providing support, comfort, and stability. They enhance performance, reduce injury risk, and cater to various sports like running, basketball, and soccer, with specific features for each activity.They come in diverse styles and designs.
+                </p>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <p>$34.00</p>
+                <button>Add to Cart</button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="cards-image">
+                <img src="./images/gym-equipment.webp" alt="">
+            </div>
+
+            <div class="card-description">
+                <h2>Equalizing Toner</h2>
+                <p>Gym equipment includes machines and tools like treadmills, dumbbells, and resistance bands designed to improve strength, endurance, and flexibility. They cater to various fitness goals, offering targeted workouts and enhancing overall physical health.
+                </p>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <p>$34.00</p>
+                <button>Add to Cart</button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="cards-image">
+                <img src="./images/gym-equipments.webp" alt="">
+            </div>
+
+            <div class="card-description">
+                <h2>Equalizing Toner</h2>
+                <p>Gym equipment includes machines and tools like treadmills, dumbbells, and resistance bands designed to improve strength, endurance, and flexibility. They cater to various fitness goals, offering targeted workouts and enhancing overall physical health.
+                </p>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <p>$34.00</p>
+                <button>Add to Cart</button>
+            </div>
+        </div>
     </div>
 
  </section>
