extra section is updated here

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         </div>
         <div class="card">
             <div class="cards-image">
-                <img src="./images/shoes.jpeg" alt="">
+                <img src="./images/shoes.jpg" alt="">
             </div>
 
             <div class="card-description">
@@ -283,7 +283,7 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
-                <p>$34.00</p>
+                <p>$54.00</p>
                 <button>Add to Cart</button>
             </div>
         </div>
@@ -301,7 +301,7 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
-                <p>$34.00</p>
+                <p>$64.00</p>
                 <button>Add to Cart</button>
             </div>
         </div>
@@ -319,7 +319,7 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
-                <p>$34.00</p>
+                <p>$74.00</p>
                 <button>Add to Cart</button>
             </div>
         </div>
