online shop section is updated here

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
             <div class="card-description">
                 <h2>Dumbell</h2>
-                <p>Dumbbells are versatile weights used in strength training, offering a wide range of exercises to build muscle, improve endurance, and enhance flexibility. They come in various sizes and are ideal for both home and gym workouts, allowing for targeted muscle development and balanced.
+                <p>Dumbbells are versatile weights used in strength training, offering a wide range of exercises to build muscle, improve endurance, and enhance flexibility. 
                 </p>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -276,7 +276,7 @@
 
             <div class="card-description">
                 <h2>Sports Shoes</h2>
-                <p>Sports shoes are designed for athletic activities, providing support, comfort, and stability. They enhance performance, reduce injury risk, and cater to various sports like running, basketball, and soccer, with specific features for each activity.They come in diverse styles and designs.
+                <p>Sports shoes are designed for athletic activities, providing support, comfort, and stability.They enhance performance, reduce injury risk.
                 </p>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -294,7 +294,7 @@
 
             <div class="card-description">
                 <h2>Equalizing Toner</h2>
-                <p>Gym equipment includes machines and tools like treadmills, dumbbells, and resistance bands designed to improve strength, endurance, and flexibility. They cater to various fitness goals, offering targeted workouts and enhancing overall physical health.
+                <p>Gym equipment includes machines and tools like treadmills, dumbbells, and resistance bands designed to improve strength, endurance, and flexibility. 
                 </p>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -312,7 +312,7 @@
 
             <div class="card-description">
                 <h2>Equalizing Toner</h2>
-                <p>Gym equipment includes machines and tools like treadmills, dumbbells, and resistance bands designed to improve strength, endurance, and flexibility. They cater to various fitness goals, offering targeted workouts and enhancing overall physical health.
+                <p>Gym equipment includes machines and tools like treadmills, dumbbells, and resistance bands designed to improve strength, endurance, and flexibility. 
                 </p>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
